2010-11-12  Steffen Kamper  <steffen@typo3.org>

	* Added feature #16315: New extension manager part 1: splitting classes

2010-11-12  Ingo Renner  <ingo@typo3.org>

	* Added feature #16337: System health status self monitoring
	* Added feature #16338: Scheduler task to regularly execute the status report checks

2010-11-12  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #16357: visualize beeing in an workspace by coloring the topbar (Thanks to Lars Zimmermann)

2010-11-12  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16370, Follow-up to #15094: SVG TypoScript object unuseable after tslib_content splitup
	* Fixed bug #15456: Changes made by ColorPicker Wizard are not saved (Thanks to Tobias Hoevelborn)
	* Fixed bug #6001: Install Tool image tests fail when there are spaces in the path name of im_path, and auto-detection of IM under Windows improved

2010-11-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16365: htmlArea RTE: Delete compressed files when clearing RTE cache
	* Fixed bug #16347: htmlArea RTE: PHP Warning: Invalid argument supplied for foreach() in ext_tables.php

2010-11-11  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16361: Javascript returns 'FALSE' instead of 'false' in class.tslib_content.php (Thanks to Krystian Szymukowicz)
	* Fixed bug #16307: Remove Workspace Module and Autopublishing from the system extension Version (Thanks to Tolleiv Nietsch)
	* Fixed bug #16311: move workspace-selector to sysext workspaces (Thanks to Tolleiv Nietsch)

2010-11-11  Oliver Hader  <oliver@typo3.org>

	* Added feature #16247: Integrate new workspace module based on ExtJS (thanks to Workspaces Team)

2010-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16314: Incorrect use of is_dir in class.tx_rtehtmlarea_clearrtecache.php (Thanks to Juergen Deisenroth)
	* Added feature #16345: User Tools>User settings: get csh from any specified csh file

2010-11-11  Christian Kuhn  <lolli@schwarzbu.ch>
