@@ -27,7 +27,8 @@ $TCA['sys_workspace'] = array(
 			'config' => array(
 				'type' => 'group',
 				'internal_type' => 'db',
-				'allowed' => 'be_users',
+				'allowed' => 'be_users,be_groups',
+				'prepend_tname' => 1,
 				'size' => '3',
 				'maxitems' => '10',
 				'autoSizeMax' => 10,
