@@ -1,3 +1,7 @@
+2010-11-13  Benjamin Mack  <benni@typo3.org>
+
+	* Added feature #13170: Workspace Owners should be manageable with groups as well (Thanks to Tolleiv Nietsch)
+
 2010-11-12  Steffen Kamper  <steffen@typo3.org>
 
 	* Added feature #16315: New extension manager part 1: splitting classes
